--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,9 @@
     <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
     <string name="toast_no_connectivity">Will refresh when network available.</string>
 
+    <string name="no_stocks">No stocks to show!</string>
+    <string name="title_widget_detail">Stock Hawk</string>
+
     <!-- A11y -->
     <string name="a11y_add_stock">Add Stock</string>
     <string name="a11y_error">Error: <xliff:g id="condition">%1$s</xliff:g></string>
