--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,8 @@
     <string name="title_widget_detail">Stock Hawk</string>
 
     <string name="toask_stock_invalid">The symbol %1$s is invalid!</string>"
+    <string name="marker_text">%s<i> on</i> <xliff:g example="5 Jul 2017" id="date">%s</xliff:g></string>
+    <string name="last_five_weeks">Variations in the last five weeks for &lt;br/&gt;%1$s</string>
 
     <!-- A11y -->
     <string name="a11y_add_stock">Add Stock</string>
